--- a/playground/package.json
+++ b/playground/package.json
@@ -8,7 +8,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "node-fetch": "^2.2.0",
+    "xmlhttprequest": "^1.8.0"
+  },
   "devDependencies": {
     "eslint": "^5.1.0",
     "eslint-config-standard": "^11.0.0",
