--- a/pointing-poker/package.json
+++ b/pointing-poker/package.json
@@ -4,19 +4,21 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.1",
+    "googleapis": "^32.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
   "devDependencies": {
+    "@material-ui/icons": "^2.0.0",
     "eslint": "^5.1.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "eslint-plugin-react": "^7.10.0"
+    "eslint-plugin-react": "^7.10.0",
+    "eslint-plugin-standard": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
