--- a/pointing-poker/package.json
+++ b/pointing-poker/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^1.4.1",
-    "googleapis": "^32.0.0",
+    "@material-ui/icons": "^2.0.0",
+    "firebase": "^5.3.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
   "devDependencies": {
-    "@material-ui/icons": "^2.0.0",
     "eslint": "^5.1.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
