--- a/pointing-poker/package.json
+++ b/pointing-poker/package.json
@@ -13,6 +13,8 @@
     "react-scripts": "1.1.4"
   },
   "devDependencies": {
+    "enzyme": "^3.4.1",
+    "enzyme-adapter-react-16": "^1.2.0",
     "eslint": "^5.1.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.13.0",
